<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="368dp"
        android:layout_height="608dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewSaveRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayoutActivityCreateRoute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E8E8E8"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textViewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="6dp"
                    android:autofillHints=" @gmail.com"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageViewRouteUser"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/destination_reference"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/imageViewRouteUser"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/destinationRouteButton"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/route_user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_edit" />
                </LinearLayout>

                <TextView
                    android:id="@+id/destinationReferenceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="6dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toEndOf="@+id/imageViewRouteUser"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E8E8E8"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textViewPickTimeRoute"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/pick_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewTimeRoute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text=""
                    android:textColor="#0097A7"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageViewTimeRoute"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="24dp"
                    android:contentDescription="@string/car_seat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTimeRoute"
                    app:srcCompat="@android:drawable/ic_menu_upload" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <EditText
                    android:id="@+id/editTextMeetingPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:autofillHints="@string/meeting_place"
                    android:hint="@string/meeting_place"
                    android:inputType="text"
                    android:textColor="#0097A7"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E8E8E8"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textViewCarSeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/car_seat"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/carSeatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center_horizontal"
                    android:minWidth="128dp"
                    android:textColor="#0097A7"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/road_reference" />

                    <ImageButton
                        android:id="@+id/roadReferenceDialogFragmentButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:src="@drawable/ic_add_24px" />
                </LinearLayout>

                <ListView
                    android:id="@+id/roadReferencesSelectedListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:layout_margin="8dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/imageViewSaveRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_route"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
